update sonar